--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,17 +23,17 @@ margin-right: 38%;
 
 #login{
     margin-right: 25%;
- 
 }
 
 #signup{
     cursor: pointer;
     margin-right: 10%;
 }
+
 .buttons{
         background-color: lightslategray;
         font-size: 30px;
-        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        font-family:'Times New Roman', Times, serif;
         color: white;
         height: 50px;
         width: 10%;
@@ -81,7 +81,6 @@ margin-right: 38%;
     background-color: lightslategray;
     overflow: hidden;
     width: 100%;
-    margin-top: -4px;
     position: absolute;
 }
 
@@ -92,7 +91,7 @@ margin-right: 38%;
     padding: 9px 30px;
     text-decoration: none;
     font-size: 20px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family:'Times New Roman', Times, serif;
     word-spacing: 3px;
   }
 
@@ -112,23 +111,9 @@ margin-right: 38%;
 h2{
     color: white;
     font-size: 20px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    padding: 15px;
-    
+    font-family:'Times New Roman', Times, serif;
+    padding: -3px;
 }
-
-/*carousel*/
-.slide{
-  margin-left:20%;
-color: white;
-width: 55%;
-}
-
-.slideimages{
-    margin-left: 13%;
-    height: 200px;
-}
-
 
 /*Game Section*/
 #games{
@@ -137,12 +122,10 @@ width: 55%;
   width: 100%;
 }
 
-
 h4{
   color: white;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family:'Times New Roman', Times, serif;
   padding: 10px;
-  
 }
 
 h4:hover{
@@ -155,7 +138,7 @@ h4:hover{
   margin-left: 60px;
   float: left;
   color: rgb(218, 139, 66);
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family:'Times New Roman', Times, serif;
   text-align: center;
   position: relative;
 }
@@ -167,6 +150,7 @@ h4:hover{
   backface-visibility: hidden;
   opacity: 1;
 }
+
 .middle {
   transition: .5s ease;
   opacity: 0;
@@ -197,18 +181,6 @@ h4:hover{
   margin-top: 200px;
 }
 
-#today{
-  text-align: center;
-}
-#todaygame{
-margin-top: 200px;
-}
-
-
-#g9{
- margin-left: 40%;
-}
-
 /*About Us*/
 
 #aboutus{
@@ -216,19 +188,19 @@ margin-top: 200px;
   height: 300px;
   width: 100%;
   float: left;
+  text-align: center;
   margin-top: 50px;
 }
 
 #info{
   color: lightslategray;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  padding: 12px;
+  font-family:'Times New Roman', Times, serif;
+  padding: 16px;
 }
 
 #mgalogo{
   background-color:rgb(199, 199, 199); opacity: 0.3;
   width: 35%;
-  margin-left: 10px;
 }
 
 /*Contact us*/
@@ -275,13 +247,13 @@ margin-top: 200px;
   color: black;
   border: 2px  solid rgb(73, 73, 73);
   background-color: rgb(177, 175, 173);
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family:'Times New Roman', Times, serif;
   word-spacing: 5px;
 }
 
 #contactdetails{
   color: lightslategray;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family:'Times New Roman', Times, serif;
   float: right;
   margin-right: 40%;
   margin-top: 5%;
@@ -303,13 +275,13 @@ width: 100%;
 color: white;
 background-color: grey;
 text-align: center;
-font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+font-family:'Times New Roman', Times, serif;
 letter-spacing: 1px;
 }
 
 #btop{
   color: black;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family:'Times New Roman', Times, serif;
   text-decoration: none;
 }
 
@@ -349,6 +321,7 @@ letter-spacing: 1px;
   height: 400px;
   font-size: 12px;
 }
+
 .form-container input[type=text], .form-container input[type=number], .form-container input[type=email]{
   width: 90%; 
   height:3%;
@@ -463,16 +436,15 @@ font-size: 10px;
   .menu{
     float: none;
     width: 100%;
-  
    }
+
    .buttons{
      height: 10px;
      width: 30px;
      font-size: 8px;
      margin-top: 20px;
      padding:0px;
-    float: right;
-   
+     float: right;
    }
 
    #signup{
@@ -483,10 +455,8 @@ font-size: 10px;
     width:150px;
     height: 300px;
     font-size: 8px;
-
-  
-   
   }
+
   .form-container input[type=text], .form-container input[type=number], .form-container input[type=email]{
     width: 100%; 
     height:3%;
@@ -495,9 +465,9 @@ font-size: 10px;
   }
 
   .form-container button[type=button],  .form-container button[type=submit]{
-color: white;
-font-size: 10px;
-margin-top: -30px;
+   color: white;
+   font-size: 10px;
+   margin-top: -30px;
   }
  
 .title{
@@ -526,6 +496,7 @@ text-decoration:none;
   float: left;
   
 }
+
 .imagestry{
  width: 100%;
 
@@ -557,7 +528,6 @@ p{
 font-size: 9px;  
 }
 
-
 #aboutus{
   margin-top: -100px;
   height: 180px;
@@ -576,6 +546,7 @@ font-size: 9px;
   display: none;
  
 }
+
 #contactdetails{
   margin-top: -100px;
   float: left;
